--- a/comorbidity-analysis.ipynb
+++ b/comorbidity-analysis.ipynb
@@ -2111,23 +2111,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The diagram below shows the DB organization:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src='images/db_organization.png' height=600 width=600/>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Blaze to interact with the database:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "db = bz.Data('postgresql://fernandogelin:'PASSWORD'@gelindb.cxw6rjdpkgtp.us-west-2.rds.amazonaws.com:5432/comorbidity')"
+    "db = bz.Data('postgresql://fernandogelin:brownprovidence@gelindb.cxw6rjdpkgtp.us-west-2.rds.amazonaws.com:5432/comorbidity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
@@ -2145,13 +2159,20 @@
        " 'semantic_type']"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.fields"
+    "db.fields #prints the table names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show the first 10 rows of each table:"
    ]
   },
   {
@@ -2484,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -2574,7 +2595,7 @@
        "..."
       ]
      },
-     "execution_count": 204,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2585,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -2675,7 +2696,7 @@
        "..."
       ]
      },
-     "execution_count": 205,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
